--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 
   --primary-color: #ffffff;
   --secondary-color: #f0f0f0;
-  --accent-color: #007aff;
+  --accent-color: #b9b9b9;
   --background-blur: rgba(255, 255, 255, 0.05);
   --background-dark: rgba(0, 0, 0, 0.25);
   --text-color: #ffffff;
