--- a/src/styles/UI.css
+++ b/src/styles/UI.css
@@ -9,7 +9,7 @@
 :root {
   --primary-color: #ffffff;
   --secondary-color: #f0f0f0;
-  --accent-color: #007aff;
+  --accent-color: #b9b9b9;
   --background-blur: rgba(120, 120, 120, 0.7);
   --background-dark: rgba(120, 120, 120, 0.7);
   --text-color: #ffffff;
@@ -501,11 +501,12 @@
 
 /* Sidebar Icons */
 .sidebaricons-container {
-  width: 60px;
-  height: 100%;
+  width: 6vh;
+  height: 40vh;
   background: var(--background-blur);
   backdrop-filter: blur(20px);
   border-right: 1px solid var(--border-color);
+  border-radius: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
